--- a/index.html
+++ b/index.html
@@ -1,82 +1,80 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <title>Quản lý Bài Radio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  
-  <!-- SweetAlert2 -->
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-  <!-- SheetJS for Excel Export -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Quản lý bài Radio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
-    .table-hover tbody tr:hover {
-      cursor: pointer;
-      background-color: #f1f1f1;
+    body {
+      background: #f5f7fa;
     }
-    tr.selected {
-      background-color: #d1e7dd !important;
+    .card {
+      border-radius: 16px;
+    }
+    .form-control {
+      border-radius: 12px;
+    }
+    .btn {
+      border-radius: 10px;
+    }
+    h2 i {
+      color: #0d6efd;
+    }
+    thead th {
+      vertical-align: middle;
     }
   </style>
 </head>
-<body class="bg-light py-4">
-  <div class="container">
-    <h2 class="text-success mb-4">📻 Quản lý Bài Radio</h2>
+<body>
+  <div class="container my-4">
+    <h2 class="text-center mb-4">
+      <i class="fas fa-podcast me-2"></i>Quản lý bài thu Radio
+    </h2>
 
-    <!-- Form nhập -->
-    <div class="row g-3 mb-3">
-      <div class="col-md-4">
-        <input type="text" id="chuDe" class="form-control" placeholder="Chủ đề">
+    <!-- Form thêm bài -->
+    <div class="card p-4 shadow-sm mb-3">
+      <div class="row g-3">
+        <div class="col-md-6">
+          <input type="text" id="chuDe" class="form-control" placeholder="🎯 Chủ đề">
+        </div>
+        <div class="col-md-6">
+          <input type="text" id="nguoiDoc" class="form-control" placeholder="🗣️ Người đọc">
+        </div>
       </div>
-      <div class="col-md-4">
-        <input type="text" id="nguoiDoc" class="form-control" placeholder="Người đọc">
-      </div>
-      <div class="col-md-3">
-        <input type="date" id="ngayPhat" class="form-control">
-      </div>
-      <div class="col-md-1 d-grid">
-        <button onclick="themRadio()" class="btn btn-success">Thêm</button>
+      <div class="mt-3 d-flex flex-wrap gap-2">
+        <button onclick="themRadio()" class="btn btn-success"><i class="fas fa-plus me-1"></i>Thêm bài</button>
+        <button onclick="xoaDaChon()" class="btn btn-warning"><i class="fas fa-trash-alt me-1"></i>Xóa đã chọn</button>
+        <button onclick="xoaTatCa()" class="btn btn-danger"><i class="fas fa-broom me-1"></i>Xóa tất cả</button>
+        <button onclick="xuatExcel()" class="btn btn-primary"><i class="fas fa-file-export me-1"></i>Xuất Excel</button>
       </div>
     </div>
 
-    <!-- Tìm kiếm -->
-    <div class="row g-3 mb-4 align-items-center">
-      <div class="col-md-3">
-        <select id="tieuChi" class="form-select">
-          <option value="chuDe">Chủ đề</option>
-          <option value="nguoiDoc">Người đọc</option>
-          <option value="ngayPhat">Ngày phát</option>
-        </select>
+    <!-- Form tìm kiếm -->
+    <div class="card p-3 shadow-sm mb-4">
+      <div class="row g-3">
+        <div class="col-md-4">
+          <input type="text" id="timNguoiDoc" class="form-control" placeholder="🔍 Tìm theo người đọc" oninput="timKiem()">
+        </div>
+        <div class="col-md-4">
+          <input type="text" id="timChuDe" class="form-control" placeholder="🔍 Tìm theo chủ đề" oninput="timKiem()">
+        </div>
+        <div class="col-md-4">
+          <input type="date" id="timNgay" class="form-control" oninput="timKiem()">
+        </div>
       </div>
-      <div class="col-md-6">
-        <input type="text" id="tuKhoa" class="form-control" placeholder="Nhập từ khóa để tìm...">
-      </div>
-      <div class="col-md-3 d-flex gap-2">
-        <button onclick="timKiem()" class="btn btn-primary">🔍 Tìm</button>
-        <button onclick="hienThiTatCa()" class="btn btn-secondary">Hiển thị tất cả</button>
-      </div>
-    </div>
-
-    <!-- Nút thao tác -->
-    <div class="mb-3 d-flex gap-2">
-      <button onclick="xoaDaChon()" class="btn btn-danger">🗑️ Xóa đã chọn</button>
-      <button onclick="xoaTatCa()" class="btn btn-outline-danger">🧹 Xóa tất cả</button>
-      <button onclick="xuatExcel()" class="btn btn-outline-success">📁 Xuất file Excel</button>
     </div>
 
     <!-- Bảng dữ liệu -->
-    <div class="table-responsive">
-      <table class="table table-bordered table-hover">
-        <thead class="table-success text-center">
+    <div class="table-responsive shadow-sm">
+      <table class="table table-bordered table-hover align-middle text-center bg-white">
+        <thead class="table-primary">
           <tr>
-            <th>Chủ đề</th>
-            <th>Người đọc</th>
-            <th>Ngày phát</th>
+            <th>✔️</th>
+            <th>🎯 Chủ đề</th>
+            <th>🗣️ Người đọc</th>
+            <th>📅 Ngày phát</th>
           </tr>
         </thead>
         <tbody id="bangRadio"></tbody>
@@ -84,154 +82,97 @@
     </div>
   </div>
 
+  <!-- Thư viện xuất Excel -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script>
-    let danhSachRadio = [];
-    let indexDangChon = null;
+    let danhSach = JSON.parse(localStorage.getItem("dsRadio")) || [];
 
-    function themRadio() {
-      const chuDe = document.getElementById("chuDe").value.trim();
-      const nguoiDoc = document.getElementById("nguoiDoc").value.trim();
-      const ngayPhat = document.getElementById("ngayPhat").value;
-
-      if (!chuDe || !nguoiDoc || !ngayPhat) {
-        Swal.fire("⚠️ Thiếu thông tin!", "Vui lòng nhập đầy đủ các trường.", "warning");
-        return;
-      }
-
-      danhSachRadio.push({ chuDe, nguoiDoc, ngayPhat });
-      luuVaoLocalStorage();
-      resetForm();
-      hienThiTatCa();
-
-      Swal.fire("✅ Đã thêm!", "Bài radio đã được thêm thành công.", "success");
+    function dinhDangNgay(iso) {
+      const d = new Date(iso);
+      return d.toISOString().split("T")[0];
     }
 
-    function resetForm() {
-      document.getElementById("chuDe").value = "";
-      document.getElementById("nguoiDoc").value = "";
-      document.getElementById("ngayPhat").value = "";
-    }
-
-    function hienThiTatCa() {
+    function hienThiBang(ds = danhSach) {
       const tbody = document.getElementById("bangRadio");
       tbody.innerHTML = "";
-
-      danhSachRadio.forEach((item, index) => {
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${item.chuDe}</td>
-          <td>${item.nguoiDoc}</td>
-          <td>${item.ngayPhat}</td>
+      ds.forEach((bai, index) => {
+        tbody.innerHTML += `
+          <tr>
+            <td><input type="checkbox" data-index="${index}"></td>
+            <td>${bai.chuDe}</td>
+            <td>${bai.nguoiDoc}</td>
+            <td>${dinhDangNgay(bai.ngay)}</td>
+          </tr>
         `;
-        row.onclick = () => chonDong(row, index);
-        if (index === indexDangChon) row.classList.add("selected");
-        tbody.appendChild(row);
       });
     }
+    function themRadio() {
+  const chuDe = document.getElementById("chuDe").value.trim();
+  const nguoiDoc = document.getElementById("nguoiDoc").value.trim();
+  if (!chuDe || !nguoiDoc) {
+    alert("Vui lòng nhập đầy đủ Chủ đề và Người đọc.");
+    return;
+  }
+  const ngay = new Date().toISOString(); // Ngày hệ thống
+  danhSach.push({ chuDe, nguoiDoc, ngay });
+  localStorage.setItem("dsRadio", JSON.stringify(danhSach));
+  
+  // Reset form và các ô tìm kiếm
+  document.getElementById("chuDe").value = "";
+  document.getElementById("nguoiDoc").value = "";
+  document.getElementById("timNguoiDoc").value = "";
+  document.getElementById("timChuDe").value = "";
+  document.getElementById("timNgay").value = "";
 
-    function chonDong(row, index) {
-      const rows = document.querySelectorAll("#bangRadio tr");
-      rows.forEach(r => r.classList.remove("selected"));
-      row.classList.add("selected");
-      indexDangChon = index;
-    }
+  // Hiển thị toàn bộ danh sách mới
+  hienThiBang();
+}
+
 
     function timKiem() {
-      const tieuChi = document.getElementById("tieuChi").value;
-      const tuKhoa = document.getElementById("tuKhoa").value.trim().toLowerCase();
-      const tbody = document.getElementById("bangRadio");
-      tbody.innerHTML = "";
+      const nd = document.getElementById("timNguoiDoc").value.toLowerCase();
+      const cd = document.getElementById("timChuDe").value.toLowerCase();
+      const ngay = document.getElementById("timNgay").value;
 
-      const ketQua = danhSachRadio.filter(item =>
-        item[tieuChi].toLowerCase().includes(tuKhoa)
-      );
-
-      if (ketQua.length === 0) {
-        tbody.innerHTML = "<tr><td colspan='3' class='text-center text-danger'>Không tìm thấy kết quả.</td></tr>";
-        return;
-      }
-
-      ketQua.forEach((item, index) => {
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${item.chuDe}</td>
-          <td>${item.nguoiDoc}</td>
-          <td>${item.ngayPhat}</td>
-        `;
-        row.onclick = () => chonDong(row, index);
-        tbody.appendChild(row);
+      const loc = danhSach.filter(bai => {
+        const checkND = bai.nguoiDoc.toLowerCase().includes(nd);
+        const checkCD = bai.chuDe.toLowerCase().includes(cd);
+        const checkNgay = !ngay || dinhDangNgay(bai.ngay) === ngay;
+        return checkND && checkCD && checkNgay;
       });
+
+      hienThiBang(loc);
     }
 
     function xoaDaChon() {
-      if (indexDangChon === null) {
-        Swal.fire("⚠️ Chưa chọn bài!", "Vui lòng chọn một bài radio để xóa.", "info");
-        return;
-      }
-
-      Swal.fire({
-        title: "Bạn có chắc?",
-        text: "Bài radio đã chọn sẽ bị xóa.",
-        icon: "warning",
-        showCancelButton: true,
-        confirmButtonText: "Xóa",
-        cancelButtonText: "Hủy"
-      }).then(result => {
-        if (result.isConfirmed) {
-          danhSachRadio.splice(indexDangChon, 1);
-          indexDangChon = null;
-          luuVaoLocalStorage();
-          hienThiTatCa();
-          Swal.fire("🗑️ Đã xóa!", "Bài radio đã được xóa.", "success");
-        }
-      });
+      const checkboxes = document.querySelectorAll("#bangRadio input[type='checkbox']:checked");
+      const chiSo = Array.from(checkboxes).map(cb => +cb.dataset.index);
+      danhSach = danhSach.filter((_, i) => !chiSo.includes(i));
+      localStorage.setItem("dsRadio", JSON.stringify(danhSach));
+      hienThiBang();
     }
 
     function xoaTatCa() {
-      Swal.fire({
-        title: "Bạn có chắc chắn?",
-        text: "Tất cả bài radio sẽ bị xóa.",
-        icon: "warning",
-        showCancelButton: true,
-        confirmButtonText: "Xóa tất cả",
-        cancelButtonText: "Hủy"
-      }).then(result => {
-        if (result.isConfirmed) {
-          danhSachRadio = [];
-          indexDangChon = null;
-          localStorage.removeItem("dsRadio");
-          hienThiTatCa();
-          Swal.fire("🧹 Đã xóa hết!", "Tất cả bài radio đã được xóa.", "success");
-        }
-      });
+      if (confirm("Bạn có chắc chắn muốn xóa toàn bộ danh sách?")) {
+        danhSach = [];
+        localStorage.removeItem("dsRadio");
+        hienThiBang();
+      }
     }
 
     function xuatExcel() {
-      if (danhSachRadio.length === 0) {
-        Swal.fire("⚠️ Không có dữ liệu!", "Danh sách trống, không thể xuất file.", "info");
-        return;
-      }
+      const data = [["Chủ đề", "Người đọc", "Ngày phát"]];
+      danhSach.forEach(bai => {
+        data.push([bai.chuDe, bai.nguoiDoc, dinhDangNgay(bai.ngay)]);
+      });
 
-      const worksheet = XLSX.utils.json_to_sheet(danhSachRadio);
-      const workbook = XLSX.utils.book_new();
-      XLSX.utils.book_append_sheet(workbook, worksheet, "DanhSachRadio");
-      XLSX.writeFile(workbook, "DanhSachRadio.xlsx");
+      const ws = XLSX.utils.aoa_to_sheet(data);
+      const wb = XLSX.utils.book_new();
+      XLSX.utils.book_append_sheet(wb, ws, "Danh sách radio");
+      XLSX.writeFile(wb, "DanhSachRadio.xlsx");
     }
 
-    function luuVaoLocalStorage() {
-      localStorage.setItem("dsRadio", JSON.stringify(danhSachRadio));
-    }
-
-    function docTuLocalStorage() {
-      const data = localStorage.getItem("dsRadio");
-      if (data) {
-        danhSachRadio = JSON.parse(data);
-        hienThiTatCa();
-      }
-    }
-
-    // Load dữ liệu khi mở trang
-    docTuLocalStorage();
+    window.onload = hienThiBang;
   </script>
 </body>
 </html>
